[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
cgmath = "0.18"
ecolor = "0.20.0"
egui = "0.19.0"
egui_wgpu_backend = "0.20.0"
egui_winit_platform = "0.16.0"
env_logger = "0.10.0"
image = "0.24.2"
log = "0.4"
pollster = "0.2.0"
wgpu = "0.14.0"
winit = "0.27.5"
