[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
bvh = "0.7.1"
cgmath = "0.18"
ecolor = "0.28"
egui = "0.28"
egui-wgpu = { version = "0.28",features = ["winit"] }
egui-winit = "0.28"
env_logger = "0.10.0"
image = "0.24.2"
log = "0.4"
pollster = "0.3"
wgpu = "0.20"
winit = "0.29"
